# arc-theme

./: CHANGELOG.md  Containerfile  INSTALL.md  README.md  configure.ac  meson.build
common/cinnamon/: meson.build
common/gnome-shell/: meson.build
common/gnome-shell/3.18/sass/: _common.scss
common/gnome-shell/3.24/sass/: _common.scss
common/gnome-shell/3.26/sass/: _common.scss
common/gnome-shell/3.28/sass/: _common.scss
common/gnome-shell/3.30/sass/: _common.scss
common/gnome-shell/3.32/sass/: _common.scss
common/gnome-shell/3.36/sass/: _colors.scss  _common.scss
common/gnome-shell/3.38/sass/: _common.scss
common/gnome-shell/40/sass/: _common.scss
common/gtk-2.0/: Makefile.am  meson.build
common/gtk-3.0/: common.am  meson.build
common/gtk-3.0/3.18/sass/: _common.scss
common/gtk-3.0/3.1x/: gtk.scss
common/gtk-3.0/3.20/sass/: _common.scss
common/gtk-3.0/3.22/sass/: _common.scss
common/gtk-3.0/3.24/sass/: _applications.scss  _colors.scss  _common.scss
common/gtk-3.0/3.2x/: _applications.scss  _budgie.scss  _colors-public.scss  _common.scss  _drawing.scss  _libhandy.scss  gtk.scss
common/unity/: meson.build
common/xfwm4/: Makefile.am  meson.build
lib/: sass_with_vars.sh
